- Corrigido testes funcionais. - Implementado Observers para os models. - Implementado listeners e eventos para mudanças de estado dos recursos. - Implementado testes unitários.
