# src/routes/api.php
@@ -7,7 +7,7 @@
  */
 
 use App\Http\Controllers\Api\V1\CakesController;
-use App\Http\Controllers\Api\V1\CakeSolicitationsController;
+use App\Http\Controllers\Api\V1\CakeSubscriptionsController;
 use App\Http\Controllers\Api\V1\SwaggerController;
 use Illuminate\Support\Facades\Route;
 
@@ -31,7 +31,7 @@ Route::name('v1.')->prefix('v1')->group(function () {
 
     Route::apiResource('cakes', CakesController::class);
 
-    Route::apiResource('cakes.solicitations', CakeSolicitationsController::class)
+    Route::apiResource('cakes.subscriptions', CakeSubscriptionsController::class)
         ->only(['store'])
         ->middleware('throttle:1000,1');
 });
